--- a/ExaminationSystem/ExaminationSystem.csproj
+++ b/ExaminationSystem/ExaminationSystem.csproj
@@ -1,31 +1,26 @@
-<<<<<<< HEAD
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-=======
-<Project Sdk="Microsoft.NET.Sdk.Web">
->>>>>>> 4fa6b345b8ec4f703bc6668f3a752dfc833aefb8
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-<<<<<<< HEAD
     <InvariantGlobalization>false</InvariantGlobalization>
-=======
-    <InvariantGlobalization>true</InvariantGlobalization>
->>>>>>> 4fa6b345b8ec4f703bc6668f3a752dfc833aefb8
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="8.0.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2" />
   </ItemGroup>
 
 </Project>
